# todo

./: Cargo.toml  README.md
backend/: .env  .gitignore  Cargo.toml
backend/migrations/: 20230725104030_todo.sql
backend/src/: main.rs
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.d.ts  app.html
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
src/: main.rs
